vemo-app/main/default/objects/ApexJobControl__c/ApexJobControl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ApexJobControl</label>
</CustomObject>