vemo-app/main/default/objects/ApexJobControl__c/fields/BatchJob__c.field-meta.xml
<CustomField>
    <fullName>BatchJob__c</fullName>
    <label>BatchJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>