vemo-app/main/default/objects/ApexJobControl__c/fields/BatchJobJobType__c.field-meta.xml
<CustomField>
    <fullName>BatchJobJobType__c</fullName>
    <label>BatchJobJobType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>