vemo-app/main/default/objects/ApexJobControl__c/fields/CronMode__c.field-meta.xml
<CustomField>
    <fullName>CronMode__c</fullName>
    <label>CronMode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>