vemo-app/main/default/objects/ApexJobControl__c/fields/CronSchedule__c.field-meta.xml
<CustomField>
    <fullName>CronSchedule__c</fullName>
    <label>CronSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>