vemo-app/main/default/objects/ApexJobControl__c/fields/ScheduleJob__c.field-meta.xml
<CustomField>
    <fullName>ScheduleJob__c</fullName>
    <label>ScheduleJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>