vemo-app/main/default/objects/ApexJobControl__c/fields/SchedulerActive__c.field-meta.xml
<CustomField>
    <fullName>SchedulerActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SchedulerActive</label>
    <type>Checkbox</type>
</CustomField>